--- a/dotnetwebapp/Pages/Index.cshtml
+++ b/dotnetwebapp/Pages/Index.cshtml
@@ -14,7 +14,7 @@ body {
 }
 div.info {
   display: table;
-  background: #d38462;
+  background: #62c8d3;
   padding: 20px 20px 20px 20px;
   border: 1px dashed black;
   border-radius: 10px;
@@ -90,7 +90,7 @@ function changeCookie() {
 </div>
 
 <body onload="checkRefresh();">
-    <p id="body_title"> OCI DevOps Demo version 0.5</p>
+    <p id="body_title"> OCI DevOps Demo version 0.6</p>
 <div class="info">
 <p> The time on the server is @DateTime.Now </p>
 </div>
