removed aria-label="refresh"

--- a/dotnetwebapp/Pages/Index.cshtml
+++ b/dotnetwebapp/Pages/Index.cshtml
@@ -94,7 +94,7 @@ function changeCookie() {
 <div class="info">
 <p> The time on the server is @DateTime.Now </p>
 </div>
-<div class="check"><input aria-label="refresh" type="checkbox" id="check" onchange="changeCookie()"> Auto Refresh</div>
+<div class="check"><input type="checkbox" id="check" onchange="changeCookie()"> Auto Refresh</div>
         <div id="center">
             &copy; Oracle. 2021
         </div>
