--- a/dotnetwebapp/Pages/Index.cshtml
+++ b/dotnetwebapp/Pages/Index.cshtml
@@ -89,7 +89,7 @@ function changeCookie() {
     <p></p>
 </div>
 
-<body onload="checkRefresh();">
+@* <body onload="checkRefresh();">
     <p id="body_title"> OCI DevOps Demo version 0.6</p>
 <div class="info">
 <p> The time on the server is @DateTime.Now </p>
@@ -99,4 +99,4 @@ function changeCookie() {
             &copy; Oracle. 2021
         </div>
     </div>
-</body>
+</body> *@
