--- a/dotnetwebapp/Pages/Index.cshtml
+++ b/dotnetwebapp/Pages/Index.cshtml
@@ -89,14 +89,14 @@ function changeCookie() {
     <p></p>
 </div>
 
-@* <body onload="checkRefresh();">
-    <p id="body_title"> OCI DevOps Demo version 0.6</p>
-<div class="info">
+<body onload="checkRefresh();">
+    <p id="body_title"> OCI DevOps Demo version 1.0</p>
+@* <div class="info">
 <p> The time on the server is @DateTime.Now </p>
 </div>
 <div class="check"><input aria-label="refresh" type="checkbox" id="check" onchange="changeCookie()"> Auto Refresh</div>
         <div id="center">
             &copy; Oracle. 2021
         </div>
-    </div>
-</body> *@
+    </div> *@
+</body>
