--- a/dotnetwebapp/Pages/Index.cshtml
+++ b/dotnetwebapp/Pages/Index.cshtml
@@ -91,12 +91,12 @@ function changeCookie() {
 
 <body onload="checkRefresh();">
     <p id="body_title"> OCI DevOps Demo version 1.0</p>
-@* <div class="info">
+<div class="info">
 <p> The time on the server is @DateTime.Now </p>
 </div>
 <div class="check"><input aria-label="refresh" type="checkbox" id="check" onchange="changeCookie()"> Auto Refresh</div>
         <div id="center">
             &copy; Oracle. 2021
         </div>
-    </div> *@
+    </div>
 </body>
