--- a/dotnetwebapp/Pages/Index.cshtml
+++ b/dotnetwebapp/Pages/Index.cshtml
@@ -90,11 +90,11 @@ function changeCookie() {
 </div>
 
 <body onload="checkRefresh();">
-    <p id="body_title"> OCI DevOps Demo version 1.0</p>
+    <p id="body_title"> OCI DevOps Demo version 1.1</p>
 <div class="info">
 <p> The time on the server is @DateTime.Now </p>
 </div>
-<div class="check"><input aria-label="refresh" type="checkbox" id="check" onchange="changeCookie()"> Auto Refresh</div>
+<div class="check"><input type="checkbox" id="check" onchange="changeCookie()"> Auto Refresh</div>
         <div id="center">
             &copy; Oracle. 2021
         </div>
